[project]
name = "render-engine-cli"
dynamic = ["version"]
description = "Command line tool for the Render Engine static site generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.2.1",
  "cookiecutter>=2.6.0",
  "render-engine>=2025.7.1a1",
  "rich>=14.0.0",
  "toml>=0.10.2",
  "watchfiles>=1.1.0",
]

[dependency-groups]
dev = [
  "ephemeral-port-reserve>=1.1.4",
  "httpx>=0.28.1",
  "mypy>=1.16.1",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "ruff==0.11.12",
  "setuptools>=80.9.0",
  "setuptools-scm>=8.3.1",
  "wheel>=0.45.1",
]

[project.urls]
homepage = "https://github.com/render-engine/render-engine-cli/"
repository = "https://github.com/render-engine/render-engine/"
documentation = "https://render-engine.readthedocs.io/en/latest/"

[project.scripts]
render-engine = "render_engine_cli.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--cov=src", "--cov-report=term-missing", "-ra", "-q"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"
